# libmagritte

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: BitMap.h  Block.h  amap.h  channel.h  index_block.h  index_cluster.h  job_conter.h  lru.h  magritte.h  magritte_impl.h  magritte_typedefs.h  rw_spin_lock.h
src/: BitMap.cpp  Block.cpp  CMakeLists.txt  amap.cpp  index_block.cpp  index_cluster.cpp  job_couter.cpp  magritte.cpp  magritte_impl.cpp  rw_spin_lock.cpp
tests/: CMakeLists.txt  amap.cpp  bitmap.cpp  block.cpp  index_block.cpp  index_cluster.cpp  lru.cpp  magritte_test.cpp
